OO-3945: download all archives of a type of element at once